# gltools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cliff.toml  pyproject.toml
.claude/: agent-alchemy.local.md  settings.json
.github/workflows/: release.yml
internal/docs/: codebase-analysis-report-2026-03-06.md  config-auth-breakdown-2026-03-06.md  release-process.md
internal/prompts/: spec.md
internal/reports/: fix-config-auth-issues-2026-03-06.md  fix-milestone-model-2026-03-09.md  fix-tui-pipeline-encoding-2026-03-09.md  logging-doctor-2026-03-09.md  oauth2-browser-login-2026-03-07.md  python-releases-pipeline-2026-03-09.md  tui-service-wiring-2026-03-06.md
internal/specs/: gltools-SPEC.md  logging-debugging-SPEC.md  python-releases-SPEC.md
scripts/: release.sh
src/gltools/: __init__.py  __main__.py  logging.py
tests/: conftest.py  test_logging.py
tests/client/: test_gitlab_client.py
tests/fixtures/: __init__.py  responses.py  test_responses.py
tests/test_cli/: test_app.py  test_auth.py  test_ci.py  test_config_logging.py  test_doctor.py  test_formatting.py  test_issue.py  test_mr.py
tests/test_client/: test_http.py  test_issues.py  test_jobs.py  test_merge_requests.py  test_pipelines.py
tests/test_config/: __init__.py  test_git_remote.py  test_keyring.py  test_multi_instance.py  test_oauth.py  test_settings.py
tests/test_models/: test_base.py  test_issue.py  test_merge_request.py  test_output.py  test_pipeline.py
tests/test_plugins/: test_discovery.py  test_plugin_cli.py  test_protocol.py
tests/test_services/: test_auth.py  test_ci.py  test_issue.py  test_merge_request.py  test_service_logging.py
tests/test_tui/: test_app.py  test_ci_status.py  test_commands.py  test_dashboard.py  test_issue_screens.py  (+1 more)
(+70 files in other folders)
