[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gltools"
version = "0.1.0"
description = "A Python-based CLI and TUI for interacting with GitLab repositories, issues, merge requests, and CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Stephen Sequenzia" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "keyring>=25.0.0",
    "rich>=13.0.0",
]

[project.scripts]
gltools = "gltools.cli.app:app"

[tool.hatch.version]
path = "src/gltools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gltools"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "pytest-cov",
    "ruff",
    "hatch",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["gltools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
